Fix down arrow on small mobile screens

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -301,7 +301,7 @@ h1 {
   background-image: url(/static/images/banner.jpg);
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   text-align: center;
 }
@@ -321,11 +321,12 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 80px;
   }
 
   .down_arrow {
     display: flex;
-    width: 25%;
+    width: 100px;
   }
 
   .down_area:hover {
@@ -340,7 +341,7 @@ h1 {
   justify-content: space-evenly;
   max-width: 100vw;
   gap: 50px;
-  padding-bottom: 100px;
+  padding-bottom: min(5%, 100px);
 }
 
 .secondary_title {
